--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^2.0.0",
     "iconv": "^2.2.1",
     "irc": "~0.5.0",
+    "irc-formatting": "1.0.0-rc3",
     "node": "~8",
     "node-telegram-bot-api": "^0.24.0",
     "imgur": "0.2.1"
