--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "escape-html": "^1.0.3",
     "iconv": "^2.3.1",
     "imgur": "^0.3.1",
-    "irc": "~0.5.0",
+    "irc-upd": "^0.10.0",
+    "irc-colors": "1.4.2",
+    "irc-formatting": "1.0.0-rc3",
     "node": "^10",
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "simple-markdown": "0.4.0"
   },
   "devDependencies": {
     "nodeunit": "^0.11.2"
